--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html lang="ja-jp">
 
 <head>
-  <title>学生会ブログ</title>
+  <title>CodeVillage Blog</title>
   <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Kiera: A Hugo theme for creative and technical writing." />
@@ -32,7 +32,7 @@
   <div id="container">
     <header>
       <h1>
-                <a href="/">学生会ブログ</a>
+                <a href="/">CodeVillage Blog</a>
             </h1>
 
       <ul id="social-media">
@@ -43,7 +43,7 @@
              </li>
       </ul>
       
-      <p><em>学生会のブログです</em></p>
+      <p><em>CodeVillageのブログです</em></p>
       
     </header>
 
